editing first markdown post

--- a/_posts/2019-10-28-markdown.md
+++ b/_posts/2019-10-28-markdown.md
@@ -3,7 +3,7 @@ title: "Machine Learning Project: Markdown Intro"
 date: 2019-10-28
 tags: [machine learning, data science, neural network, markdown]
 header:
-  image: "/images/markdown/data_web"
+  image: "/images/markdown/data_web.jpg"
 excerpt: "Machine Learning, Perceptron, Data Science"
 mathjax: "true"
 ---
@@ -53,10 +53,10 @@ head(df)
 Here's some iniline code `x+y`.
 
 Here's an image:
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/markdown/markdown_code.jpg" alt="screen shot of markdown code">
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/markdown/anscombe.jpg" alt="anscombe's quartet">
 
 Here's some math:
 
 $$z=x+y$$
 
-You can also put it inline $$zz=y+y$$
+You can also put it inline $$z=y+y$$
