editing first markdown post

--- a/_posts/2019-10-28-markdown.md
+++ b/_posts/2019-10-28-markdown.md
@@ -1,10 +1,10 @@
 ---
-title: "Machine Learning Project: Markdown Intro"
+title: "Portfolio post reference: Markdown Example"
 date: 2019-10-28
 tags: [machine learning, data science, neural network, markdown]
 header:
   image: "/images/markdown/data_web.jpg"
-excerpt: "Machine Learning, Perceptron, Data Science"
+excerpt: "Machine Learning, Markdown, Data Science, Anscombe"
 mathjax: "true"
 ---
 
