first post image fix

--- a/_posts/2019-10-28-markdown.md
+++ b/_posts/2019-10-28-markdown.md
@@ -3,7 +3,7 @@ title: "Machine Learning Post Template: Markdown Example"
 date: 2019-10-28
 tags: [machine learning, data science, neural network, markdown]
 header:
-  image: "/assets/images/markdown/data_web.jpg"
+  image: /assets/images/markdown/data_web.jpg
 excerpt: "Machine Learning, Markdown, Data Science, Anscombe"
 mathjax: "true"
 ---
