updating markdown post

--- a/_posts/2019-10-28-markdown.md
+++ b/_posts/2019-10-28-markdown.md
@@ -1,10 +1,10 @@
 ---
-title: "Machine Learning Post Template: Markdown Example"
+title: "Machine Learning Post Template: Markdown"
 date: 2019-10-28
-tags: [machine learning, data science, neural network, markdown]
+tags: [machine learning, markdown, data science, anscombe]
 header:
   image: /assets/images/markdown/data_web.jpg
-excerpt: "Machine Learning, Markdown, Data Science, Anscombe"
+excerpt: "Creating initial post template with various markdown functionality"
 mathjax: "true"
 ---
 
@@ -59,4 +59,4 @@ Here's some math:
 
 $$z=x+y$$
 
-You can also put it inline $$z=y+y$$
+You can also put it inline $$z=x+y$$
