--- a/_posts/2019-10-28-markdown.md
+++ b/_posts/2019-10-28-markdown.md
@@ -1,9 +1,10 @@
 ---
-title: "Machine Learning Post Template: Markdown"
+title: "Machine Learning: Markdown"
 date: 2019-10-28
 tags: [machine learning, markdown, data science, anscombe]
 header:
   image: /assets/images/markdown/data_web.jpg
+  teaser: /assets/images/markdown/data_web.jpg
 excerpt: "Creating initial post template with various markdown functionality"
 mathjax: "true"
 ---
